<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.peanut.discord.customview.CopyImage
        android:id="@+id/copy_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_copy_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_text"
        android:textSize="@dimen/text_h6"
        app:layout_constraintBottom_toBottomOf="@id/copy_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/copy_image"
        app:layout_constraintTop_toTopOf="@id/copy_image" />

    <com.peanut.discord.customview.EditImage
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copy_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="@dimen/text_h6"
        app:layout_constraintBottom_toBottomOf="@id/edit_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_image"
        app:layout_constraintTop_toTopOf="@id/edit_image" />

    <com.peanut.discord.customview.DeleteImage
        android:id="@+id/delete_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="@dimen/text_h6"
        app:layout_constraintBottom_toBottomOf="@id/delete_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete_image"
        app:layout_constraintTop_toTopOf="@id/delete_image" />
</androidx.constraintlayout.widget.ConstraintLayout>